force-app/main/default/objects/Weapon_Qualification__c/Weapon_Qualification__c.object-meta.xml
<CustomObject>
    <label>Weapon Qualification</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Weapon Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weapon Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>