force-app/main/default/objects/Weapon_Qualification__c/fields/FIR_Form__c.field-meta.xml
<CustomField>
    <fullName>FIR_Form__c</fullName>
    <label>FIR Form</label>
    <referenceTo>FIR_Form__c</referenceTo>
    <relationshipLabel>Weapon Qualifications</relationshipLabel>
    <relationshipName>Weapon_Qualifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>