force-app/main/default/objects/Weapon_Qualification__c/fields/Qualified_90__c.field-meta.xml
<CustomField>
    <fullName>Qualified_90__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified 90</label>
    <type>Checkbox</type>
</CustomField>