force-app/main/default/objects/Weapon_Qualification__c/fields/Sight_Type__c.field-meta.xml
<CustomField>
    <fullName>Sight_Type__c</fullName>
    <label>Sight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iron Sight</fullName>
            </value>
            <value>
                <fullName>Optic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>