force-app/main/default/objects/Weapon_Qualification__c/fields/Weapon__c.field-meta.xml
<CustomField>
    <fullName>Weapon__c</fullName>
    <label>Weapon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pistol</fullName>
            </value>
            <value>
                <fullName>Shot Gun</fullName>
            </value>
            <value>
                <fullName>Riffle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>