force-app/main/default/objects/Weapon_Qualification__c/fields/Weapon_Code__c.field-meta.xml
<CustomField>
    <fullName>Weapon_Code__c</fullName>
    <label>Weapon Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>